#66 Исправлены ошибки в юнит тестах, правки самой логики навыков, сделаны первые системные тесты